@@ -1,3 +1,10 @@
+20131207
+ - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2013/12/05 22:59:45
+     [sftp-client.c]
+     fix memory leak in error path in do_readdir(); pointed out by
+     Loganaden Velvindron @ AfriNIC in bz#2163
+
 20131205
  - (djm) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2013/11/21 08:05:09
